{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 40,
  "lineage": "8612a8a6-acf0-02f6-9f5c-e176a3e889ee",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c45a9b28c6520e92",
            "arn": "arn:aws:ec2:us-east-1:126573932591:elastic-ip/eipalloc-0c45a9b28c6520e92",
            "association_id": "eipassoc-0c45578e1a519190b",
            "domain": "vpc",
            "id": "eipalloc-0c45a9b28c6520e92",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02c4dd63bfffa4302",
            "private_dns": "ip-10-0-1-91.ec2.internal",
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-54-85-145-227.compute-1.amazonaws.com",
            "public_ip": "54.85.145.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:internet-gateway/igw-081fc24cd6c85d3a8",
            "id": "igw-081fc24cd6c85d3a8",
            "owner_id": "126573932591",
            "tags": {
              "Name": "cev-igw"
            },
            "tags_all": {
              "Name": "cev-igw"
            },
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c45a9b28c6520e92",
            "association_id": "eipassoc-0c45578e1a519190b",
            "connectivity_type": "public",
            "id": "nat-0b6d6a5af0747ddbb",
            "network_interface_id": "eni-02c4dd63bfffa4302",
            "private_ip": "10.0.1.91",
            "public_ip": "54.85.145.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-040e13b1d68e82911",
            "tags": {
              "Name": "cev-nat"
            },
            "tags_all": {
              "Name": "cev-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:route-table/rtb-03f870b97e3ab6356",
            "id": "rtb-03f870b97e3ab6356",
            "owner_id": "126573932591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6d6a5af0747ddbb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cev-private-rt"
            },
            "tags_all": {
              "Name": "cev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:route-table/rtb-084fcc663547e9d4b",
            "id": "rtb-084fcc663547e9d4b",
            "owner_id": "126573932591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081fc24cd6c85d3a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cev-public-rt"
            },
            "tags_all": {
              "Name": "cev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa7104ff80709694",
            "route_table_id": "rtb-03f870b97e3ab6356",
            "subnet_id": "subnet-0bc64a67fcb07b394"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002c1ba8957be22a3",
            "route_table_id": "rtb-03f870b97e3ab6356",
            "subnet_id": "subnet-06b2f4ec1682a750e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3ae97f10a4b9163",
            "route_table_id": "rtb-084fcc663547e9d4b",
            "subnet_id": "subnet-040e13b1d68e82911"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:security-group/sg-0e6a3282012c9d80c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6a3282012c9d80c",
            "ingress": [],
            "name": "cev-fargate-sg",
            "name_prefix": "",
            "owner_id": "126573932591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cev-fargate-sg"
            },
            "tags_all": {
              "Name": "cev-fargate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:security-group/sg-07a0ba91c2ffc462f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a0ba91c2ffc462f",
            "ingress": [],
            "name": "cev-lambda-sg",
            "name_prefix": "",
            "owner_id": "126573932591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cev-lambda-sg"
            },
            "tags_all": {
              "Name": "cev-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:security-group/sg-0291afa76465a499b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0291afa76465a499b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a0ba91c2ffc462f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cev-rds-sg",
            "name_prefix": "",
            "owner_id": "126573932591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cev-rds-sg"
            },
            "tags_all": {
              "Name": "cev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.lambda_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fargate_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-622618362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0291afa76465a499b",
            "security_group_rule_id": "sgr-0ff721a863d4f8465",
            "self": false,
            "source_security_group_id": "sg-0e6a3282012c9d80c",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.fargate_sg",
            "module.vpc.aws_security_group.lambda_sg",
            "module.vpc.aws_security_group.rds_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:subnet/subnet-0bc64a67fcb07b394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc64a67fcb07b394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126573932591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cev-private-subnet-a"
            },
            "tags_all": {
              "Name": "cev-private-subnet-a"
            },
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:subnet/subnet-06b2f4ec1682a750e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b2f4ec1682a750e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126573932591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cev-private-subnet-b"
            },
            "tags_all": {
              "Name": "cev-private-subnet-b"
            },
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:subnet/subnet-040e13b1d68e82911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040e13b1d68e82911",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126573932591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cev-public-subnet"
            },
            "tags_all": {
              "Name": "cev-public-subnet"
            },
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:vpc/vpc-02eb7b9eda9780a61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042862067d247009c",
            "default_route_table_id": "rtb-0a390f47aa8a83658",
            "default_security_group_id": "sg-0948327c809522d81",
            "dhcp_options_id": "dopt-0e8bf740103847ce4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02eb7b9eda9780a61",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a390f47aa8a83658",
            "owner_id": "126573932591",
            "tags": {
              "Name": "cev-vpc"
            },
            "tags_all": {
              "Name": "cev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126573932591:vpc-endpoint/vpce-0bca4730690f8e966",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bca4730690f8e966",
            "ip_address_type": "ipv4",
            "owner_id": "126573932591",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03f870b97e3ab6356"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cev-s3-endpoint"
            },
            "tags_all": {
              "Name": "cev-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-02eb7b9eda9780a61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}